--- a/dev/style.css
+++ b/dev/style.css
@@ -1,3 +1,15 @@
+@import "functions"; 
+@import "variables";
+
+$primary: $yellow; // set the $primary variable
+
+$theme-colors: map-merge($theme-colors, (
+  "primary": $primary
+));
+
+// set changes
+@import "bootstrap";
+
 :root {
   --jumbotron-padding-y: 3rem;
 }
