--- a/dev/base_style.css
+++ b/dev/base_style.css
@@ -6135,7 +6135,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #feee8c !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -6145,7 +6145,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #FEDD19 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
