--- a/dev/style.css
+++ b/dev/style.css
@@ -20,7 +20,7 @@
 }
 
 .jumbotron-heading {
-  font-weight: 300;
+  font-weight: bold;
 }
 
 .jumbotron .container {
@@ -34,6 +34,24 @@ footer {
 
 footer p {
   margin-bottom: .25rem;
+}
+
+#imatge-fons{
+  position: relative;
+  background-image: url(data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22508%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20508%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_189409714bb%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_189409714bb%22%3E%3Crect%20width%3D%22508%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22169.74652862548828%22%20y%3D%22123.69999961853027%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E);
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-color-imatge {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(254, 238, 140, 0.3) !important;
+  z-index: 1;
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
