--- a/dev/base_style.css
+++ b/dev/base_style.css
@@ -395,7 +395,7 @@ h6, .h6 {
 .lead {
   font-size: 1.25rem;
   font-weight: bold;
-  color: #fff !important;
+  color: #1a1e21 !important;
 }
 
 .display-1 {
